# image-generate

./: .gitignore  README.md
skills/image-generate/: .gitignore  README.md  SKILL.md  pyproject.toml
skills/image-generate/config/: profiles.example.yaml
skills/image-generate/references/: api.md  prompting.md
skills/image-generate/scripts/: image_gen.py
skills/image-generate/src/image_generate/: __init__.py  __main__.py  cli.py  config.py  jobs.py  models.py  registry.py  runner.py  save.py  size.py  transparent.py
skills/image-generate/src/image_generate/providers/: __init__.py  base.py  openai_compatible.py
